# snag

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  test-attach.sh
.github/: cliff.toml
.github/workflows/: build.yml  pr.yml  release.yml  tag-release.yml
docs/: snag-prd.md  snag-tech-spec.md
packaging/arch/: PKGBUILD
src/: client.rs  config.rs  error.rs  main.rs
src/cli/: commands.rs  mod.rs  output.rs
src/daemon/: adopt.rs  mod.rs  pty.rs  registry.rs  ringbuf.rs  server.rs  session.rs
src/protocol/: codec.rs  types.rs
src/tui/: app.rs  mod.rs  ui.rs
tests/integration/: mod.rs  session_lifecycle.rs
