[package]
name = "snag"
version = "1.0.0"
edition = "2021"
description = "Local PTY session multiplexer — spawn, discover, attach to, and interact with any shell session"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["rt", "io-util", "net", "signal", "macros", "sync", "time", "fs"] }
nix = { version = "0.29", features = ["term", "fs", "process", "signal", "user"] }
clap = { version = "4", features = ["derive"] }
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures-lite = "2"
toml = "0.8"
getrandom = "0.2"
hex = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.deb]
maintainer = "moukrea <contact@moukrea.dev>"
copyright = "2026, moukrea"
license-file = ["LICENSE", "0"]
depends = "libc6 (>= 2.31)"
extended-description = """snag is a local PTY session multiplexer that lets you spawn, discover, \
attach to, and interact with any shell session on your machine — interactively or programmatically."""
section = "utils"
priority = "optional"
assets = [
    ["target/release/snag", "usr/bin/", "755"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/snag", dest = "/usr/bin/snag", mode = "755" },
]
